# petalcluster

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE.html  NAMESPACE  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: data.R  dbscan.R  extendr-wrappers.R  hdbscan.R  optics.R  petalcluster-package.R  plot.R  print.R  validate.R
bench/: Makefile  bench_r.R  bench_sklearn.py  compare.R  gen_data.R
data/: rings.rda
data-raw/: rings.R
man/: petal_dbscan.Rd  petal_hdbscan.Rd  petal_optics.Rd  petalcluster-package.Rd  plot.petal.Rd  rings.Rd
reference/: index.html  index.md  petal_dbscan.html  petal_dbscan.md  petal_hdbscan.html  petal_hdbscan.md  petal_optics.html  petal_optics.md  petalcluster-package.html  petalcluster-package.md  petalcluster.html  plot.petal.html  plot.petal.md  plot.petal_hdbscan.html  rings.html  rings.md
src/: Makevars.in  Makevars.win.in  entrypoint.c  petalcluster-win.def
src/rust/: Cargo.toml  vendor.tar.xz
src/rust/src/: convert.rs  lib.rs
tests/: testthat.R
tests/testthat/: test-dbscan.R  test-hdbscan.R  test-optics.R  test-validate.R
tests/testthat/_snaps/: dbscan.md  hdbscan.md  optics.md
