[package]
name = 'petalcluster'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.81'

[lib]
crate-type = [ 'staticlib' ]
name = 'petalcluster'

[dependencies]
extendr-api = '0.8.1'
ndarray = '0.17'
petal-clustering = '0.13'
petal-neighbors = '0.18'

[profile.release]
lto = true
codegen-units = 1
